--- a/view/heroDetail.ejs
+++ b/view/heroDetail.ejs
@@ -139,7 +139,7 @@
         </div>
 
 
-        <input type="submit" value="update">
+        <input type="submit" onclick="alert('Data berhasil di Ubah')" value="update">
         <br>
         <br>
 
